<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.book.viemodel.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.book.viemodel.dashboard.GenresFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_genres" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.book.viemodel.notifications.NotFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_createCollectionFragment"
            app:destination="@id/createCollectionFragment" />
        <action
            android:id="@+id/action_navigation_notifications_to_collectionDetailFragment"
            app:destination="@id/collectionDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/createCollectionFragment"
        android:name="com.example.book.viemodel.collections.CreateCollectionFragment"
        android:label="@string/new_collection"
        tools:layout="@layout/fragment_create_collection" />

    <fragment
        android:id="@+id/collectionDetailFragment"
        android:name="com.example.book.viemodel.collections.CollectionDetailFragment"
        android:label="@string/collection"
        tools:layout="@layout/fragment_collection_detail" >
        <argument
            android:name="collectionId"
            app:argType="string" />
        <action
            android:id="@+id/action_collectionDetailFragment_to_addBooksToCollectionFragment"
            app:destination="@id/addBooksToCollectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/addBooksToCollectionFragment"
        android:name="com.example.book.viemodel.collections.AddBooksToCollectionFragment"
        android:label="@string/add_books_to_collection"
        tools:layout="@layout/fragment_add_books_to_collection" >
        <argument
            android:name="collectionId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_fav"
        android:name="com.example.book.viemodel.fav.FavFragment"
        android:label="@string/title_fav"
        tools:layout="@layout/fragment_fav" />
    <fragment
        android:id="@+id/navigation_prof"
        android:name="com.example.book.viemodel.prof.ProfFragment"
        android:label="@string/title_prof"
        tools:layout="@layout/fragment_prof" />

</navigation>
